syntax = "proto3";

package mellivora.common;

option go_package = "github.com/mellivora-mind/mellivora-mind-studio/gen/go/common";

import "google/protobuf/timestamp.proto";

// ============================================================================
// Common Types
// ============================================================================

// Decimal representation for precise financial calculations
message Decimal {
  string value = 1;  // String representation to avoid floating point issues
}

// Date without time component (YYYYMMDD format)
message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

// Time with timezone
message DateTime {
  google.protobuf.Timestamp timestamp = 1;
  string timezone = 2;  // e.g., "Asia/Shanghai"
}

// Pagination request
message PageRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
  bool descending = 4;
}

// Pagination response
message PageResponse {
  int32 page = 1;
  int32 page_size = 2;
  int64 total = 3;
  int32 total_pages = 4;
}

// ============================================================================
// Enums
// ============================================================================

// Asset types
enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_STOCK = 1;
  ASSET_TYPE_ETF = 2;
  ASSET_TYPE_FUTURE = 3;
  ASSET_TYPE_OPTION = 4;
  ASSET_TYPE_BOND = 5;
  ASSET_TYPE_CONVERTIBLE_BOND = 6;
  ASSET_TYPE_INDEX = 7;
  ASSET_TYPE_FUND = 8;
}

// Exchange codes
enum Exchange {
  EXCHANGE_UNSPECIFIED = 0;
  EXCHANGE_SSE = 1;      // Shanghai Stock Exchange
  EXCHANGE_SZSE = 2;     // Shenzhen Stock Exchange
  EXCHANGE_BSE = 3;      // Beijing Stock Exchange
  EXCHANGE_HKEX = 4;     // Hong Kong Stock Exchange
  EXCHANGE_CFFEX = 5;    // China Financial Futures Exchange
  EXCHANGE_SHFE = 6;     // Shanghai Futures Exchange
  EXCHANGE_DCE = 7;      // Dalian Commodity Exchange
  EXCHANGE_CZCE = 8;     // Zhengzhou Commodity Exchange
  EXCHANGE_INE = 9;      // Shanghai International Energy Exchange
  EXCHANGE_GFEX = 10;    // Guangzhou Futures Exchange
}

// Direction for positions
enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_LONG = 1;
  DIRECTION_SHORT = 2;
}

// Order side
enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY = 1;
  SIDE_SELL = 2;
  SIDE_SHORT = 3;
  SIDE_COVER = 4;
}

// Order types
enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_MARKET = 2;
  ORDER_TYPE_TWAP = 3;
  ORDER_TYPE_VWAP = 4;
  ORDER_TYPE_STOP = 5;
  ORDER_TYPE_STOP_LIMIT = 6;
  ORDER_TYPE_ALGO = 7;
}

// Time in force
enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_DAY = 1;
  TIME_IN_FORCE_GTC = 2;   // Good till cancelled
  TIME_IN_FORCE_IOC = 3;   // Immediate or cancel
  TIME_IN_FORCE_FOK = 4;   // Fill or kill
}

// Order status
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_SUBMITTED = 2;
  ORDER_STATUS_ACCEPTED = 3;
  ORDER_STATUS_PARTIAL = 4;
  ORDER_STATUS_FILLED = 5;
  ORDER_STATUS_CANCELLED = 6;
  ORDER_STATUS_REJECTED = 7;
  ORDER_STATUS_EXPIRED = 8;
}

// Deal type
enum DealType {
  DEAL_TYPE_UNSPECIFIED = 0;
  DEAL_TYPE_NORMAL = 1;
  DEAL_TYPE_MATCH = 2;
  DEAL_TYPE_BLOCK = 3;
}

// ============================================================================
// Common Messages
// ============================================================================

// Security identifier
message SecurityId {
  string code = 1;       // e.g., "600000"
  Exchange exchange = 2;
  AssetType asset_type = 3;
}

// Price and quantity pair
message PriceQty {
  Decimal price = 1;
  Decimal quantity = 2;
}

// OHLCV bar
message OHLCVBar {
  SecurityId security_id = 1;
  Date date = 2;
  Decimal open = 3;
  Decimal high = 4;
  Decimal low = 5;
  Decimal close = 6;
  Decimal volume = 7;
  Decimal amount = 8;
  Decimal adj_factor = 9;  // Adjustment factor for splits/dividends
}

// Tick data
message Tick {
  SecurityId security_id = 1;
  DateTime timestamp = 2;
  Decimal last_price = 3;
  Decimal volume = 4;
  Decimal amount = 5;
  repeated PriceQty bids = 6;  // Bid levels
  repeated PriceQty asks = 7;  // Ask levels
}

// ============================================================================
// Industry Classification
// ============================================================================

enum IndustryClassification {
  INDUSTRY_CLASSIFICATION_UNSPECIFIED = 0;
  INDUSTRY_CLASSIFICATION_CITIC = 1;       // CITIC Securities
  INDUSTRY_CLASSIFICATION_SHENWAN = 2;     // Shenwan Hongyuan
  INDUSTRY_CLASSIFICATION_WIND = 3;        // Wind
  INDUSTRY_CLASSIFICATION_GICS = 4;        // Global Industry Classification
}

message Industry {
  IndustryClassification classification = 1;
  string level1_code = 2;
  string level1_name = 3;
  string level2_code = 4;
  string level2_name = 5;
  string level3_code = 6;
  string level3_name = 7;
}
